--- a/WRCw/Ford.html
+++ b/WRCw/Ford.html
@@ -10,12 +10,11 @@
 <body>
 
 <div class="side-buttons">
-    <button class="square-btn">Car Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
-  <h1 class="nev">FORD Fiesta WRC</h1>
+  <button class="square-btn" data-sound="../WRC/Start/Fiesta.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../WRC/ONBOARD/Fiesta.mp3">ONBOARD</button>
+</div>
 
-    <!-- 3D forgó képváltó -->
+   
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
