--- a/WRCw/Ford P.html
+++ b/WRCw/Ford P.html
@@ -11,13 +11,13 @@
 
 
 <div class="side-buttons">
-    <button class="square-btn">Car Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../WRC/Start/Polo.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../WRC/ONBOARD/Polo.mp3">ONBOARD</button>
+</div>
 
   <h1 class="nev">FORD Puma WRC</h1>
 
-    <!-- 3D forgó képváltó -->
+    
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
