--- a/WECw/Alpin.html
+++ b/WECw/Alpin.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div class="side-buttons">
-    <button class="square-btn">Engine Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../WEC/Engine/">Engine Start</button>
+  <button class="square-btn" data-sound="../WEC/ONBOARD/Alpin.mp3">ONBOARD</button>
+</div>
   <h1 class="nev">Alpine A424</h1>
 
-    <!-- 3D forgó képváltó -->
+   
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
