--- a/WECw/Mazda.html
+++ b/WECw/Mazda.html
@@ -9,13 +9,13 @@
 <body>
 
 <div class="side-buttons">
-    <button class="square-btn">Engine Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../WEC/Engine/Mazda.mp3">Engine Start</button>
+  <button class="square-btn" data-sound="../WEC/ONBOARD/Mazda.mp3">ONBOARD</button>
+</div>
 
   <h1 class="nev">Mazda 787B Group C Prototype</h1>
 
-    <!-- 3D forgó képváltó -->
+    
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
