--- a/Formula 1w/Ferrari.html
+++ b/Formula 1w/Ferrari.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <div class="side-buttons">
-    <button class="square-btn">Car Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../F1/Start/Ferrari.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../F1/ONBOARD/Ferrari.mp3">ONBOARD</button>
+</div>
   <h1 class="nev">Ferrari F1-2000</h1>
 
-    <!-- 3D forgó képváltó -->
+   
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
