--- a/Formula 1w/McLaren.html
+++ b/Formula 1w/McLaren.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <div class="side-buttons">
-    <button class="square-btn">Car Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../F1/Start/McLaren.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../F1/ONBOARD/McLaren.mp3">ONBOARD</button>
+</div>
   <h1 class="nev">McLaren MP4</h1>
 
-    <!-- 3D forgó képváltó -->
+
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
