--- a/Formula 1w/Mercedes.html
+++ b/Formula 1w/Mercedes.html
@@ -9,12 +9,11 @@
 </head>
 <body>
 <div class="side-buttons">
-    <button class="square-btn">Car Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../F1/Start/Mercedes.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../F1/ONBOARD/Mercedes.mp3">ONBOARD</button>
+</div>
   <h1 class="nev">Mercedes-AMG F1 W11 EQ Performance</h1>
 
-    <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
