--- a/DTMw/BMW.html
+++ b/DTMw/BMW.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 <div class="side-buttons">
-    <button class="square-btn">Engine Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../DTM/Engine/BMW.mp3">Engine Start</button>
+  <button class="square-btn" data-sound="../DTM/ONBOARD/BMW.mp3">ONBOARD</button>
+</div>
+
   <h1 class="nev">BMW M3 GTR</h1>
 
-    <!-- 3D forgó képváltó -->
+    
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
