--- a/DTMw/Porsche g.html
+++ b/DTMw/Porsche g.html
@@ -9,12 +9,11 @@
 </head>
 <body>
 <div class="side-buttons">
-    <button class="square-btn">Engine Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../DTM/Engine/Porsche.mp3">Engine Start</button>
+  <button class="square-btn" data-sound="../DTM/ONBOARD/Porsche.mp3">ONBOARD</button>
+</div>
   <h1 class="nev">REXY</h1>
 
-    <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
