--- a/WRCw/Citroen.html
+++ b/WRCw/Citroen.html
@@ -10,8 +10,8 @@
 <body>
 
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WRC/Start/Citroen.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/ONBOARD/Citroen.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Start/C3.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../WRC/ONBOARD/C3.mp3">ONBOARD</button>
 </div>
 
   <h1 class="nev">CITROËN C3 WRC</h1>
