--- a/WRCw/Ford P.html
+++ b/WRCw/Ford P.html
@@ -11,8 +11,8 @@
 
 
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WRC/Start/Polo.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/ONBOARD/Polo.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Start/Puma.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../WRC/ONBOARD/Puma.mp3">ONBOARD</button>
 </div>
 
   <h1 class="nev">FORD Puma WRC</h1>
@@ -65,3 +65,4 @@ A Ford Puma Rally1 egy modern, hibrid hajtású raliautó, amely a Ford motorspo
 
 
  
+
