--- a/WRCw/Citroen.html
+++ b/WRCw/Citroen.html
@@ -11,7 +11,7 @@
 
 <div class="side-buttons">
   <button class="square-btn" data-sound="../WRC/Start/C3.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/ONBOARD/C3.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/C3.mp3">ONBOARD</button>
 </div>
 
   <h1 class="nev">CITROËN C3 WRC</h1>
@@ -64,3 +64,4 @@ A Citroën C3 WRC egy technikailag fejlett, látványos és versenyképes raliau
 </html>
 
  
+
