--- a/wrc.html
+++ b/wrc.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="wrc.css">
-  <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="kepek/wrc.jpg" type="image/x-icon">
   <title>WRC</title>
 </head>
 <body>
@@ -46,4 +46,5 @@
   <script src="hatter.js"></script>
 </body>
 </html>
+
 
