--- a/WRCw/Citroen.html
+++ b/WRCw/Citroen.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/Citroen.css">
-  <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../kepek/wrc.jpg" type="image/x-icon">
   <title>CITROËN</title>
 </head>
 <body>
@@ -64,4 +64,5 @@ A Citroën C3 WRC egy technikailag fejlett, látványos és versenyképes raliau
 </html>
 
  
+
 
