--- a/WRCw/Ford P.html
+++ b/WRCw/Ford P.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Ford P.css">
-    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/wrc.jpg" type="image/x-icon">
     <title>FORD</title>
 </head>
 <body>
@@ -65,4 +65,5 @@ A Ford Puma Rally1 egy modern, hibrid hajtású raliautó, amely a Ford motorspo
 
 
  
+
 
