--- a/WRCw/Ford.html
+++ b/WRCw/Ford.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Ford.css">
-    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/wrc.jpg" type="image/x-icon">
     <title>FORD</title>
 </head>
 <body>
@@ -63,3 +63,4 @@ A Ford Fiesta WRC egy ikonikus raliautó, amely a modern WRC korszak egyik megha
 
 
  
+
