--- a/WRCw/Peugeot.html
+++ b/WRCw/Peugeot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Peugeot.css">
-    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/wrc.jpg" type="image/x-icon">
     <title>PEUGEOT</title>
 </head>
 <body>
@@ -71,3 +71,4 @@ A Peugeot 206 WRC a 2000-es évek elejének egyik legsikeresebb és legikonikusa
 
 
  
+
