--- a/WRCw/Skoda.html
+++ b/WRCw/Skoda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Skoda.css">
-    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/wrc.jpg" type="image/x-icon">
     <title>ŠKODA</title>
 </head>
 <body>
@@ -65,3 +65,4 @@ A Škoda Fabia RS Rally2 a cseh gyártó legújabb raliautója, amely a WRC2-ben
 
 
  
+
