--- a/WRCw/Volkswagen.html
+++ b/WRCw/Volkswagen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Volkswagen.css">
-    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/wrc.jpg" type="image/x-icon">
     <title>VOLKSWAGEN</title>
 </head>
 <body>
@@ -73,6 +73,7 @@ A Volkswagen Polo R WRC a modern rali egyik legsikeresebb és legmeghatározóbb
 
 </body>
 </html>
+
 
 
 
