--- a/WECw/Alpin.html
+++ b/WECw/Alpin.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/Alpin.css">
+  <link rel="shortcut icon" href="../kepek/wec.jpg" type="image/x-icon">
   <title>ALPINE</title>
 </head>
 <body>
@@ -68,3 +69,4 @@ Az Alpine A424 és a hozzá tartozó versenyprogram a francia gyártó komoly el
 
 
  
+
