--- a/WECw/Aston.html
+++ b/WECw/Aston.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Aston.css">
+    <link rel="shortcut icon" href="../kepek/wec.jpg" type="image/x-icon">
     <title>ASTON MARTIN</title>
 </head>
 <body>
@@ -67,3 +68,4 @@ Az Aston Martin Valkyrie AMR-LMH a brit gyártó visszatérését jelenti a hoss
 
 
  
+
