--- a/WECw/Audi.html
+++ b/WECw/Audi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Audi.css">
+    <link rel="shortcut icon" href="../kepek/wec.jpg" type="image/x-icon">
     <title>AUDI</title>
 </head>
 <body>
@@ -63,5 +64,6 @@ Az Audi R18 e-tron quattro TDI a hosszútávú versenyzés egyik technikai csúc
 
 </body>
 </html>
+
 
 
