--- a/WECw/BMW.html
+++ b/WECw/BMW.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/BMW.css">
+    <link rel="shortcut icon" href="../kepek/wec.jpg" type="image/x-icon">
     <title>BMW</title>
 </head>
 <body>
@@ -68,3 +69,4 @@ A BMW M Hybrid V8 a bajor gyártó visszatérését jelenti a hosszútávú vers
 
 
  
+
