--- a/WECw/Ferrari.html
+++ b/WECw/Ferrari.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Ferrari.css">
+    <link rel="shortcut icon" href="../kepek/wec.jpg" type="image/x-icon">
     <title>FERRARI</title>
 </head>
 <body>
@@ -67,5 +68,6 @@ A Ferrari 499P a márka technikai újraértelmezése a hosszútávú versenyzés
 
 </body>
 </html>
+
 
 
