--- a/WECw/Mazda.html
+++ b/WECw/Mazda.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Mazda.css">
+    <link rel="shortcut icon" href="../kepek/wec.jpg" type="image/x-icon">
     <title>MAZDA</title>
 </head>
 <body>
@@ -67,3 +68,4 @@ A Mazda 787B nemcsak technikai bravúr, hanem kulturális ikon is. A Wankel-moto
 
 
  
+
