--- a/Formula 1w/Lotus.html
+++ b/Formula 1w/Lotus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Lotus.css">
-    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/f1.jpg" type="image/x-icon">
     <title>LOTUS</title>
 </head>
 <body>
@@ -71,5 +71,6 @@ A Lotus név 2011-ben két különböző csapatot takart, eltérő technikai há
 
 </body>
 </html>
+
 
 
