--- a/Formula 1w/McLaren.html
+++ b/Formula 1w/McLaren.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/McLaren.css">
-    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/f1.jpg" type="image/x-icon">
     <title>McLAREN</title>
 </head>
 <body>
@@ -66,3 +66,4 @@ A McLaren MP4/4 minden idők egyik legdominánsabb Forma–1-es autója volt. A 
 
 
  
+
