--- a/Formula 1w/Mercedes.html
+++ b/Formula 1w/Mercedes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Mercedes.css">
-    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/f1.jpg" type="image/x-icon">
     <title>MERCEDES</title>
 </head>
 <body>
@@ -65,5 +65,6 @@ A Mercedes W11 a hibrid éra egyik legfejlettebb és legsikeresebb Forma–1-es 
 
 </body>
 </html>
+
 
 
