--- a/Formula 1w/RedBull.html
+++ b/Formula 1w/RedBull.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/RedBull.css">
-    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/f1.jpg" type="image/x-icon">
     <title>REDBULL</title>
 </head>
 <body>
@@ -66,3 +66,4 @@ A Red Bull RB7 a 2011-es szezon abszolút domináns autója volt, amely technika
 
 
  
+
