--- a/Formula 1w/Renault.html
+++ b/Formula 1w/Renault.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Renault.css">
-    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../kepek/f1.jpg" type="image/x-icon">
     <title>RENAULT</title>
 </head>
 <body>
@@ -65,3 +65,4 @@ A Renault R24 stabil és versenyképes konstrukció volt, amely megalapozta a cs
 
 
  
+
