--- a/DTMw/Audi.html
+++ b/DTMw/Audi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Audi.css">
-     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
+     <link rel="shortcut icon" href="../kepek/dtm.jpg" type="image/x-icon">
     <title>AUDI</title>
 </head>
 <body>
@@ -72,3 +72,4 @@ A 2019-es Audi RS5 DTM a turbókorszak nyitányaként új mércét állított a 
 
 
  
+
