--- a/DTMw/Bently.html
+++ b/DTMw/Bently.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Bently.css">
-     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
+     <link rel="shortcut icon" href="../kepek/dtm.jpg" type="image/x-icon">
     <title>BENTLY</title>
 </head>
 <body>
@@ -63,5 +63,6 @@ A Bentley Continental GT3 egy különleges versenyautó, amely a luxus és a tel
 
 </body>
 </html>
+
 
 
