--- a/DTMw/Mamba.html
+++ b/DTMw/Mamba.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Mamba.css">
-     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
+     <link rel="shortcut icon" href="../kepek/dtm.jpg" type="image/x-icon">
     <title>MERCEDES</title>
 </head>
 <body>
@@ -65,3 +65,4 @@ A Mercedes-AMG GT3 MANN-FILTER Mamba nemcsak technikailag versenyk√©pes GT3 aut√
 
 
  
+
