--- a/DTMw/Mercedes.html
+++ b/DTMw/Mercedes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Mercedes.css">
-     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
+     <link rel="shortcut icon" href="../kepek/dtm.jpg" type="image/x-icon">
     <title>MERCEDES</title>
 </head>
 <body>
@@ -61,3 +61,4 @@ A Mercedes-Benz 190E Evo II DTM a márka motorsport-történetének egyik legfon
 
 
  
+
