--- a/DTMw/Porsche g.html
+++ b/DTMw/Porsche g.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Porsche g.css">
-     <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
+     <link rel="shortcut icon" href="../kepek/dtm.jpg" type="image/x-icon">
     <title>PORSCHE</title>
 </head>
 <body>
@@ -73,3 +73,4 @@ A „Rexy” Porsche nemcsak technikai szempontból versenyképes GT3 autó, han
 
 
  
+
