--- a/DTMw/Mercedes.html
+++ b/DTMw/Mercedes.html
@@ -10,7 +10,7 @@
 <body>
 <div class="side-buttons">
   <button class="square-btn" data-sound="../DTM/Engine/Mercedes.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../DTM/ONBOARD/Mercedes.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../DTM/Onboard/Mercedes.mp3">ONBOARD</button>
 </div>
   <h1 class="nev">Mercedes-Benz 190E W201</h1>
 
@@ -61,4 +61,5 @@ A Mercedes-Benz 190E Evo II DTM a márka motorsport-történetének egyik legfon
 
 
  
+
 
