--- a/DTMw/Mamba.html
+++ b/DTMw/Mamba.html
@@ -10,7 +10,7 @@
 <body>
 <div class="side-buttons">
   <button class="square-btn" data-sound="../DTM/Engine/Mamba.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../DTM/ONBOARD/Mamba.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../DTM/Onboard/Mamba.mp3">ONBOARD</button>
 </div>
   <h1 class="nev">MAMBA</h1>
 
@@ -65,4 +65,5 @@ A Mercedes-AMG GT3 MANN-FILTER Mamba nemcsak technikailag versenyk√©pes GT3 aut√
 
 
  
+
 
