--- a/Formula 1w/Lotus.html
+++ b/Formula 1w/Lotus.html
@@ -10,7 +10,7 @@
 <body>
 <div class="side-buttons">
   <button class="square-btn" data-sound="../F1/Start/Lotus.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../F1/ONBOARD/Lotus.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../F1/Onboard/Lotus.mp3">ONBOARD</button>
 </div>
   <h1 class="nev">Lotus Renault GP R31</h1>
 
@@ -71,6 +71,7 @@ A Lotus név 2011-ben két különböző csapatot takart, eltérő technikai há
 
 </body>
 </html>
+
 
 
 
