--- a/Formula 1w/McLaren.html
+++ b/Formula 1w/McLaren.html
@@ -10,7 +10,7 @@
 <body>
 <div class="side-buttons">
   <button class="square-btn" data-sound="../F1/Start/McLaren.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../F1/ONBOARD/McLaren.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../F1/Onboard/McLaren.mp3">ONBOARD</button>
 </div>
   <h1 class="nev">McLaren MP4</h1>
 
@@ -66,4 +66,5 @@ A McLaren MP4/4 minden idők egyik legdominánsabb Forma–1-es autója volt. A 
 
 
  
+
 
