--- a/WECw/Alpin.html
+++ b/WECw/Alpin.html
@@ -10,7 +10,7 @@
 <body>
 <div class="side-buttons">
   <button class="square-btn" data-sound="../WEC/Engine/">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/ONBOARD/Alpin.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/Alpin.mp3">ONBOARD</button>
 </div>
   <h1 class="nev">Alpine A424</h1>
 
@@ -69,4 +69,5 @@ Az Alpine A424 és a hozzá tartozó versenyprogram a francia gyártó komoly el
 
 
  
+
 
