--- a/WECw/Aston.html
+++ b/WECw/Aston.html
@@ -10,7 +10,7 @@
 <body>
 <div class="side-buttons">
   <button class="square-btn" data-sound="../WEC/Engine/Aston.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/ONBOARD/Aston.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/Aston.mp3">ONBOARD</button>
 </div>
   <h1 class="nev">Aston Martin Valkyrie AMR-LMH</h1>
 
@@ -68,4 +68,5 @@ Az Aston Martin Valkyrie AMR-LMH a brit gyártó visszatérését jelenti a hoss
 
 
  
+
 
