--- a/WECw/BMW.html
+++ b/WECw/BMW.html
@@ -10,7 +10,7 @@
 <body>
 <div class="side-buttons">
   <button class="square-btn" data-sound="../WEC/Engine/BMW.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/ONBOARD/BMW.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/BMW.mp3">ONBOARD</button>
 </div>
   <h1 class="nev">BMW M Hybrid V8</h1>
 
@@ -69,4 +69,5 @@ A BMW M Hybrid V8 a bajor gyártó visszatérését jelenti a hosszútávú vers
 
 
  
+
 
