--- a/WECw/Mazda.html
+++ b/WECw/Mazda.html
@@ -11,7 +11,7 @@
 
 <div class="side-buttons">
   <button class="square-btn" data-sound="../WEC/Engine/Mazda.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/ONBOARD/Mazda.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/Mazda.mp3">ONBOARD</button>
 </div>
 
   <h1 class="nev">Mazda 787B Group C Prototype</h1>
@@ -68,4 +68,5 @@ A Mazda 787B nemcsak technikai bravúr, hanem kulturális ikon is. A Wankel-moto
 
 
  
+
 
