--- a/WRCw/Ford P.html
+++ b/WRCw/Ford P.html
@@ -12,7 +12,7 @@
 
 <div class="side-buttons">
   <button class="square-btn" data-sound="../WRC/Start/Puma.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/ONBOARD/Puma.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/Puma.mp3">ONBOARD</button>
 </div>
 
   <h1 class="nev">FORD Puma WRC</h1>
@@ -65,5 +65,6 @@ A Ford Puma Rally1 egy modern, hibrid hajtású raliautó, amely a Ford motorspo
 
 
  
+
 
 
