--- a/WRCw/Peugeot.html
+++ b/WRCw/Peugeot.html
@@ -11,7 +11,7 @@
 
 <div class="side-buttons">
   <button class="square-btn" data-sound="../WRC/Start/Peugeot.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/ONBOARD/Peugeot.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/Peugeot.mp3">ONBOARD</button>
 </div>
 
   <h1 class="nev">PEUGEOT 206 WRC</h1>
@@ -71,4 +71,5 @@ A Peugeot 206 WRC a 2000-es évek elejének egyik legsikeresebb és legikonikusa
 
 
  
+
 
