--- a/WRCw/Skoda.html
+++ b/WRCw/Skoda.html
@@ -11,7 +11,7 @@
 
   <div class="side-buttons">
   <button class="square-btn" data-sound="../WRC/Start/Skoda.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/ONBOARD/Skoda.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/Skoda.mp3">ONBOARD</button>
 </div>
 
   <h1 class="nev">ŠKODA Fabia RS WRC</h1>
@@ -65,4 +65,5 @@ A Škoda Fabia RS Rally2 a cseh gyártó legújabb raliautója, amely a WRC2-ben
 
 
  
+
 
