--- a/WRCw/Volkswagen.html
+++ b/WRCw/Volkswagen.html
@@ -11,7 +11,7 @@
 
   <div class="side-buttons">
   <button class="square-btn" data-sound="../WRC/Start/Polo.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/ONBOARD/Polo.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/Polo.mp3">ONBOARD</button>
 </div>
 
   <h1 class="nev">VOLKSWAGEN Polo GTI R WRC</h1>
@@ -73,6 +73,7 @@ A Volkswagen Polo R WRC a modern rali egyik legsikeresebb és legmeghatározóbb
 
 </body>
 </html>
+
 
 
 
