--- a/wec.html
+++ b/wec.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="wec.css">
-  <link rel="shortcut icon" href="" type="image/x-icon">
-  <title>WRC</title>
+  <link rel="shortcut icon" href="kepek/wec.jpg" type="image/x-icon">
+  <title>WEC</title>
 </head>
 <body>
 
@@ -46,3 +46,4 @@
   <script src="hatter.js"></script>
 </body>
 </html>
+
