--- a/f1.html
+++ b/f1.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="wrc.css">
-  <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
-  <title>WRC</title>
+  <link rel="shortcut icon" href="kepek/f1.jpg" type="image/x-icon">
+  <title>Formula 1</title>
 </head>
 <body>
 
@@ -46,3 +46,4 @@
   <script src="hatter.js"></script>
 </body>
 </html>
+
