--- a/WRCw/Citroen.html
+++ b/WRCw/Citroen.html
@@ -10,8 +10,8 @@
 <body>
 
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WRC/Start/C3.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/Onboard/C3.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Start/C3.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/C3.mp3">Verseny közben</button>
 </div>
 
   <h1 class="nev">CITROËN C3 WRC</h1>
@@ -64,5 +64,6 @@ A Citroën C3 WRC egy technikailag fejlett, látványos és versenyképes raliau
 </html>
 
  
+
 
 
