--- a/WRCw/Ford.html
+++ b/WRCw/Ford.html
@@ -10,8 +10,8 @@
 <body>
 
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WRC/Start/Fiesta.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/Onboard/Fiesta.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Start/Fiesta.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/Fiesta.mp3">Verseny közben</button>
 </div>
 
    
@@ -63,5 +63,6 @@ A Ford Fiesta WRC egy ikonikus raliautó, amely a modern WRC korszak egyik megha
 
 
  
+
 
 
