--- a/DTMw/Audi.html
+++ b/DTMw/Audi.html
@@ -13,8 +13,8 @@
   <h1>Audi RS 5 DTM Turbo</h1>
 
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../DTM/Engine/Audi.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../DTM/Onboard/Audi.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../DTM/Engine/Audi.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../DTM/Onboard/Audi.mp3">verseny közben</button>
 </div>
     
   <div class="carousel-container">
@@ -72,5 +72,6 @@ A 2019-es Audi RS5 DTM a turbókorszak nyitányaként új mércét állított a 
 
 
  
+
 
 
