--- a/WRCw/Peugeot.html
+++ b/WRCw/Peugeot.html
@@ -10,8 +10,8 @@
 <body>
 
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WRC/Start/Peugeot.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/Onboard/Peugeot.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Start/Peugeot.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/Peugeot.mp3">Verseny közben</button>
 </div>
 
   <h1 class="nev">PEUGEOT 206 WRC</h1>
@@ -71,5 +71,6 @@ A Peugeot 206 WRC a 2000-es évek elejének egyik legsikeresebb és legikonikusa
 
 
  
+
 
 
