--- a/WRCw/Skoda.html
+++ b/WRCw/Skoda.html
@@ -10,8 +10,8 @@
 <body>
 
   <div class="side-buttons">
-  <button class="square-btn" data-sound="../WRC/Start/Skoda.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/Onboard/Skoda.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Start/Skoda.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/Skoda.mp3">Verseny közben</button>
 </div>
 
   <h1 class="nev">ŠKODA Fabia RS WRC</h1>
@@ -65,6 +65,7 @@ A Škoda Fabia RS Rally2 a cseh gyártó legújabb raliautója, amely a WRC2-ben
 
 
  
+
 
 
 
