--- a/DTMw/Bently.html
+++ b/DTMw/Bently.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../DTM/Engine/Bently.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../DTM/Onboard/Bently.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../DTM/Engine/Bently.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../DTM/Onboard/Bently.mp3">Verseny közben</button>
 </div>
 
   <h1 class="nev">Bently Continental GT3</h1>
@@ -63,6 +63,7 @@ A Bentley Continental GT3 egy különleges versenyautó, amely a luxus és a tel
 
 </body>
 </html>
+
 
 
 
