--- a/WRCw/Volkswagen.html
+++ b/WRCw/Volkswagen.html
@@ -10,8 +10,8 @@
 <body>
 
   <div class="side-buttons">
-  <button class="square-btn" data-sound="../WRC/Start/Polo.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../WRC/Onboard/Polo.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WRC/Start/Polo.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../WRC/Onboard/Polo.mp3">Verseny közben</button>
 </div>
 
   <h1 class="nev">VOLKSWAGEN Polo GTI R WRC</h1>
@@ -73,6 +73,7 @@ A Volkswagen Polo R WRC a modern rali egyik legsikeresebb és legmeghatározóbb
 
 </body>
 </html>
+
 
 
 
