--- a/Formula 1w/Ferrari.html
+++ b/Formula 1w/Ferrari.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../F1/Start/Ferrari.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../F1/Onboard/Ferrari.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../F1/Start/Ferrari.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../F1/Onboard/Ferrari.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">Ferrari F1-2000</h1>
 
@@ -66,5 +66,6 @@ A Ferrari F1-2000 a Scuderia Ferrari modern korszakának nyitánya volt. A model
 
 
  
+
 
 
