--- a/Formula 1w/McLaren.html
+++ b/Formula 1w/McLaren.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../F1/Start/McLaren.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../F1/Onboard/McLaren.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../F1/Start/McLaren.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../F1/Onboard/McLaren.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">McLaren MP4</h1>
 
@@ -66,5 +66,6 @@ A McLaren MP4/4 minden idők egyik legdominánsabb Forma–1-es autója volt. A 
 
 
  
+
 
 
