--- a/Formula 1w/Mercedes.html
+++ b/Formula 1w/Mercedes.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../F1/Start/Mercedes.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../F1/Onboard/Mercedes.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../F1/Start/Mercedes.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../F1/Onboard/Mercedes.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">Mercedes-AMG F1 W11 EQ Performance</h1>
 
@@ -65,6 +65,7 @@ A Mercedes W11 a hibrid éra egyik legfejlettebb és legsikeresebb Forma–1-es 
 
 </body>
 </html>
+
 
 
 
