--- a/DTMw/Porsche b.html
+++ b/DTMw/Porsche b.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="side-buttons">
-  <button class="square-btn" data-sound="../DTM/Engine/Porsche.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../DTM/ONBOARD/Porsche.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../DTM/Engine/Porsche.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../DTM/ONBOARD/Porsche.mp3">Verseny közben</button>
 </div>
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -26,3 +26,4 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
