--- a/Formula 1w/RedBull.html
+++ b/Formula 1w/RedBull.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../F1/Start/RedBull.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../F1/Onboard/RedBull.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../F1/Start/RedBull.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../F1/Onboard/RedBull.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">RedBull RB7</h1>
 
@@ -66,5 +66,6 @@ A Red Bull RB7 a 2011-es szezon abszolút domináns autója volt, amely technika
 
 
  
+
 
 
