--- a/DTMw/Porsche g.html
+++ b/DTMw/Porsche g.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../DTM/Engine/Porsche.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../DTM/Onboard/Porsche.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../DTM/Engine/Porsche.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../DTM/Onboard/Porsche.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">REXY</h1>
 
@@ -73,5 +73,6 @@ A „Rexy” Porsche nemcsak technikai szempontból versenyképes GT3 autó, han
 
 
  
+
 
 
