--- a/Formula 1w/Renault.html
+++ b/Formula 1w/Renault.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../F1/Start/Renault.mp3">Car Start</button>
-  <button class="square-btn" data-sound="../F1/Onboard/Renault.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../F1/Start/Renault.mp3">Autó indítás</button>
+  <button class="square-btn" data-sound="../F1/Onboard/Renault.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">Renault R24</h1>
 
@@ -65,5 +65,6 @@ A Renault R24 stabil és versenyképes konstrukció volt, amely megalapozta a cs
 
 
  
+
 
 
