--- a/WECw/Alpin.html
+++ b/WECw/Alpin.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WEC/Engine/">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/Onboard/Alpin.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Engine/">Motor Start</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/Alpin.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">Alpine A424</h1>
 
@@ -69,5 +69,6 @@ Az Alpine A424 és a hozzá tartozó versenyprogram a francia gyártó komoly el
 
 
  
+
 
 
