--- a/WECw/Aston.html
+++ b/WECw/Aston.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WEC/Engine/Aston.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/Onboard/Aston.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Engine/Aston.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/Aston.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">Aston Martin Valkyrie AMR-LMH</h1>
 
@@ -68,5 +68,6 @@ Az Aston Martin Valkyrie AMR-LMH a brit gyártó visszatérését jelenti a hoss
 
 
  
+
 
 
