--- a/WECw/Audi.html
+++ b/WECw/Audi.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WEC/Engine/Audi.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/Onboard/Audi.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Engine/Audi.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/Audi.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">Audi R18 e-tron quattro TDI</h1>
 
@@ -64,6 +64,7 @@ Az Audi R18 e-tron quattro TDI a hosszútávú versenyzés egyik technikai csúc
 
 </body>
 </html>
+
 
 
 
