--- a/WECw/BMW.html
+++ b/WECw/BMW.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WEC/Engine/BMW.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/Onboard/BMW.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Engine/BMW.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/BMW.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">BMW M Hybrid V8</h1>
 
@@ -69,5 +69,6 @@ A BMW M Hybrid V8 a bajor gyártó visszatérését jelenti a hosszútávú vers
 
 
  
+
 
 
