--- a/WECw/Ferrari.html
+++ b/WECw/Ferrari.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WEC/Engine/Ferrari.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/Onboard/Ferrari.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Engine/Ferrari.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/Ferrari.mp3">Verseny közben</button>
 </div>
   <h1 class="nev">Ferrari 499P</h1>
 
@@ -68,6 +68,7 @@ A Ferrari 499P a márka technikai újraértelmezése a hosszútávú versenyzés
 
 </body>
 </html>
+
 
 
 
