--- a/WECw/Mazda.html
+++ b/WECw/Mazda.html
@@ -10,8 +10,8 @@
 <body>
 
 <div class="side-buttons">
-  <button class="square-btn" data-sound="../WEC/Engine/Mazda.mp3">Engine Start</button>
-  <button class="square-btn" data-sound="../WEC/Onboard/Mazda.mp3">ONBOARD</button>
+  <button class="square-btn" data-sound="../WEC/Engine/Mazda.mp3">Motor Start</button>
+  <button class="square-btn" data-sound="../WEC/Onboard/Mazda.mp3">Verseny közben</button>
 </div>
 
   <h1 class="nev">Mazda 787B Group C Prototype</h1>
@@ -68,5 +68,6 @@ A Mazda 787B nemcsak technikai bravúr, hanem kulturális ikon is. A Wankel-moto
 
 
  
+
 
 
